# cleophee-Bot

./: CMakeLists.txt  README.md  chatscript.py  requirements.txt  run_cleophee.py
Resources/: CMakeLists.txt
Resources/RAWDATA/: CMakeLists.txt  filescleophee.txt
Resources/RAWDATA/CLEOPHEE/: CMakeLists.txt  CleopheeControl.top  alimentation.top  cleophee_concepts.top  cleophee_nlg.top  general.top  introduction.top  qalimentation.top  qtabac.top
cleopheeweb/: CMakeLists.txt  db.sqlite3  manage.py
cleopheeweb/accounts/: urls.py  views.py
cleopheeweb/accounts/static/accounts/css/: agent.css  agentDemoApp.css
cleopheeweb/accounts/static/accounts/p5/: sketch.js
cleopheeweb/chat/: urls.py  views.py
cleopheeweb/chat/templates/chat/: base.html  home.html
cleopheeweb/cleopheeweb/: settings.py  urls.py  wsgi.py
cleopheeweb/templates/registration/: base.html  login.html
